// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`primitive arrays > add to end (multiple) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "insert": {
        "after": "characters[-1]",
        "items": [
          "Simon Gruber",
          "Zeus Carver",
        ],
      },
    },
  },
]
`;

exports[`primitive arrays > add to end (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "insert": {
        "after": "characters[-1]",
        "items": [
          "Simon Gruber",
        ],
      },
    },
  },
]
`;

exports[`primitive arrays > remove from end (multiple) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[1:]",
      ],
    },
  },
]
`;

exports[`primitive arrays > remove from end (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[2]",
      ],
    },
  },
]
`;

exports[`primitive arrays > remove from middle (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[2]",
      ],
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "characters[1]": "Zeus Carver",
      },
    },
  },
]
`;
